--- a/app/output/debug.html
+++ b/app/output/debug.html
@@ -1,7 +1,7 @@
 <html>
             <head> 
                 <title>Ocorrencias</title>
-                <link href="app/resources/sinistro.css" rel="stylesheet" type="text/css" media="screen"/>
+                <link href="app/resources/sinistro_tipo_acao.css" rel="stylesheet" type="text/css" media="screen"/>
             </head>
             <footer></footer>
             <body>
@@ -15,11 +15,11 @@
                         </tr>
                         <tr>
                             <td>83.102.459/0001-23</td>
-                            <td class="data_hora"><b>09/04/2025   10:23:20</b></td>
+                            <td class="data_hora"><b>10/04/2025   08:21:35</b></td>
                         </tr>
                         <tr>
                             <td>(047) 2106-8000</td>
-                            <td class="cor_ocorrencia colspan=4">Ocorrência de 01/01/2024 até 09/04/2025</td>                     
+                            <td class="cor_ocorrencia colspan=4">Ocorrência de 01/01/2024 até 10/04/2025 por tipo de ação P</td>                  
                         </tr>
                     </table>
                 </div>
@@ -37,20 +37,8 @@
                                 <td class='borda_direita_esquerda'>0</td>
                                 <td class='centralizar'>1</td>
                             </tr><tr>
-                                <td class='borda_direita'>3</td>
-                                <td class='direita'>DESABAMENTO DA EDIFICAÇÃO</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
-                            </tr><tr>
-                                <td class='borda_direita'>5</td>
-                                <td class='direita'>DESTELHAMENTO</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
-                            </tr><tr>
-                                <td class='borda_direita'>7</td>
-                                <td class='direita'>QUEDA DE ÁRVORE</td>
+                                <td class='borda_direita'>1</td>
+                                <td class='direita'>PATOLOGIAS NA EDIFICAÇÃO</td>
                                 <td class='borda_direita_esquerda'>1</td>
                                 <td class='borda_direita_esquerda'>0</td>
                                 <td class='centralizar'>1</td>
@@ -62,9 +50,9 @@
                                 <td class='centralizar'>1</td>
                             </tr><tr>
                             <td class='espaco_para_direta' colspan=2><b>Total:</b></td>
-                            <td class='centralizador_com_borda_esquerda'><b>5</b></td>
+                            <td class='centralizador_com_borda_esquerda'><b>3</b></td>
                             <td class='centralizador_com_borda'><b>0</b></td>
-                            <td class='centralizador_com_borda'><b>5</b></td>    
+                            <td class='centralizador_com_borda'><b>3</b></td>    
                         </tr>
                     </table>
                 </body>
