--- a/app/output/debug.html
+++ b/app/output/debug.html
@@ -5,24 +5,23 @@
             </head>
             <footer></footer>
             <body>
-                <div class="header">
-                    <table class="cabecalho" style="width:100%">
-                        <tr>
-                            <td><b><i>PREFEITURA MUNICIPAL DE JARAGUÁ DO SUL</i></b></td>
-                        </tr>
-                        <tr>
-                            <td> prefeitura@jaraguadosul.com.br</td>
-                        </tr>
-                        <tr>
-                            <td>83.102.459/0001-23</td>
-                            <td class="data_hora"><b>10/04/2025   08:21:35</b></td>
-                        </tr>
-                        <tr>
-                            <td>(047) 2106-8000</td>
-                            <td class="cor_ocorrencia colspan=4">Ocorrência de 01/01/2024 até 10/04/2025 por tipo de ação P</td>                  
-                        </tr>
-                    </table>
+               <div class="header">
+               <table class="cabecalho" style="width:100%">
+                    <tr>
+                        <td colspan="2">
+                        <img src="app/images/logo_prefeitura.jpeg" class="logo_a_esquerda">
+                        <img src="app/images/logo_defesa_civil.png" class="logo_a_direita">
+                <div style="text-align: center;">
+                        ESTADO DE SANTA CATARINA<br>
+                        MUNICÍPIO DE SANTA CATARINA<br>
+                        GABINETE DO PREFEITO<br>
+                        DIRETORIA DE PROTEÇÃO E DEFESA CIVIL
                 </div>
+                        </td>
+                    </tr>
+                </table>        
+                </div>
+
                 <table class="borda_tabela" style="width: 100%">
                     <tr>
                         <td class="borda_inferior_centralizador"><b>Id</b></td> 
@@ -37,8 +36,20 @@
                                 <td class='borda_direita_esquerda'>0</td>
                                 <td class='centralizar'>1</td>
                             </tr><tr>
-                                <td class='borda_direita'>1</td>
-                                <td class='direita'>PATOLOGIAS NA EDIFICAÇÃO</td>
+                                <td class='borda_direita'>3</td>
+                                <td class='direita'>DESABAMENTO DA EDIFICAÇÃO</td>
+                                <td class='borda_direita_esquerda'>1</td>
+                                <td class='borda_direita_esquerda'>0</td>
+                                <td class='centralizar'>1</td>
+                            </tr><tr>
+                                <td class='borda_direita'>5</td>
+                                <td class='direita'>DESTELHAMENTO</td>
+                                <td class='borda_direita_esquerda'>1</td>
+                                <td class='borda_direita_esquerda'>0</td>
+                                <td class='centralizar'>1</td>
+                            </tr><tr>
+                                <td class='borda_direita'>7</td>
+                                <td class='direita'>QUEDA DE ÁRVORE</td>
                                 <td class='borda_direita_esquerda'>1</td>
                                 <td class='borda_direita_esquerda'>0</td>
                                 <td class='centralizar'>1</td>
@@ -50,9 +61,9 @@
                                 <td class='centralizar'>1</td>
                             </tr><tr>
                             <td class='espaco_para_direta' colspan=2><b>Total:</b></td>
-                            <td class='centralizador_com_borda_esquerda'><b>3</b></td>
+                            <td class='centralizador_com_borda_esquerda'><b>5</b></td>
                             <td class='centralizador_com_borda'><b>0</b></td>
-                            <td class='centralizador_com_borda'><b>3</b></td>    
+                            <td class='centralizador_com_borda'><b>5</b></td>    
                         </tr>
                     </table>
                 </body>
