--- a/app/output/debug.html
+++ b/app/output/debug.html
@@ -1,7 +1,7 @@
 <html>
             <head> 
                 <title>Ocorrencias</title>
-                <link href="app/resources/sinistro_tipo_acao.css" rel="stylesheet" type="text/css" media="screen"/>
+                <link href="app/resources/sinistro_parecer.css" rel="stylesheet" type="text/css" media="screen"/>
             </head>
             <footer></footer>
             <body>
@@ -25,45 +25,51 @@
                 <table class="borda_tabela" style="width: 100%">
                     <tr>
                         <td class="borda_inferior_centralizador"><b>Id</b></td> 
-                        <td class="borda_inferior"><b>Descrição</b></td>
-                        <td class="borda_inferior_centralizador"><b>Quantidade</b></td>
-                        <td class="borda_inferior_centralizador"><b>Baixadas</b></td>
-                        <td class="borda_inferior_centralizador"><b>Abertas</b></td>
+                        <td class="borda_inferior"><b>Solicitante</b></td>
+                        <td class="borda_inferior_centralizador"><b>CPF</b></td>
+                        <td class="borda_inferior_centralizador"><b>Data Cadastro</b></td>
+                        <td class="borda_inferior_centralizador"><b>FGTS</b></td>
+                        <td class="borda_inferior_centralizador"><b>FGTS Liberado</b></td>
+                        <td class="borda_inferior_centralizador"><b>Fone</b></td>
+                        <td class="borda_inferior_centralizador"><b>Status</b></td>
+                        <td class="borda_inferior_centralizador"><b>Data Cadastro</b></td>
+                        <td class="borda_inferior_centralizador"><b>Descrição</b></td>
+                        <td class="borda_inferior_centralizador"><b>QTDE</b></td>
+                        <td class="borda_inferior_centralizador"><b>BAIXADAS</b></td>
+                        <td class="borda_inferior_centralizador"><b>ABERTAS</b></td>
                     </tr><tr>
-                                <td class='borda_direita'>26</td>
-                                <td class='direita'>AREA DE RISCO DE ESCORREGAMENTO DE TERRA/PEDRA</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
-                            </tr><tr>
-                                <td class='borda_direita'>3</td>
-                                <td class='direita'>DESABAMENTO DA EDIFICAÇÃO</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
-                            </tr><tr>
-                                <td class='borda_direita'>5</td>
-                                <td class='direita'>DESTELHAMENTO</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
-                            </tr><tr>
-                                <td class='borda_direita'>7</td>
-                                <td class='direita'>QUEDA DE ÁRVORE</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
+                                <td class='borda_direita'>4</td>
+                                <td class='direita'>Valdecir Frassini</td>
+                                <td class='borda_direita_esquerda'></td>
+                                <td class='borda_direita_esquerda'>2024-03-06</td>
+                                <td class='borda_direita'></td>
+                                <td class='borda_direita'>S</td>
+                                <td class='borda_direita'> (47) 99954-0855</td>
+                                <td class='borda_direita_esquerda'>A</td>
+                                <td class='borda_direita_esquerda'>2024-03-06</td>
+                                <td class='centralizar'>DESABAMENTO DO MURO</td>
+                                <td class='borda_direita_esquerda_sem_padding'>1</td>
+                                <td class='borda_direita'>0</td>
+                                <td class='centralizador'>1</td>
                             </tr><tr>
                                 <td class='borda_direita'>30</td>
-                                <td class='direita'>RISCO IMINENTE DE QUEDA DE ARVORE</td>
-                                <td class='borda_direita_esquerda'>1</td>
-                                <td class='borda_direita_esquerda'>0</td>
-                                <td class='centralizar'>1</td>
+                                <td class='direita'>ALCIDES SEHNEM</td>
+                                <td class='borda_direita_esquerda'>538.557.289-68</td>
+                                <td class='borda_direita_esquerda'>2024-04-16</td>
+                                <td class='borda_direita'>N</td>
+                                <td class='borda_direita'>N</td>
+                                <td class='borda_direita'>(47) 99946-7087</td>
+                                <td class='borda_direita_esquerda'>A</td>
+                                <td class='borda_direita_esquerda'>2024-04-16</td>
+                                <td class='centralizar'>RISCO IMINENTE DE QUEDA DE ARVORE</td>
+                                <td class='borda_direita_esquerda_sem_padding'>1</td>
+                                <td class='borda_direita'>0</td>
+                                <td class='centralizador'>1</td>
                             </tr><tr>
-                            <td class='espaco_para_direta' colspan=2><b>Total:</b></td>
-                            <td class='centralizador_com_borda_esquerda'><b>5</b></td>
-                            <td class='centralizador_com_borda'><b>0</b></td>
-                            <td class='centralizador_com_borda'><b>5</b></td>    
+                            <td class='espaco_para_direta' colspan=10><b>Total:</b></td>
+                            <td class='centralizador_com_borda_esquerda'><b>2</b></td>
+                            <td class='centralizador_com_borda_sem_padding'><b>0</b></td>
+                            <td class='borda_superior_centralizador'><b>2</b></td>
                         </tr>
                     </table>
                 </body>
